UI | Functionality update
-Added support for multi language
-Improved local storage in reaction of multilanguage support
-Added dark theme
-Now the favorites an non favorites views are sorted by name and by added date
-Added README.md
-Added MIT License

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,10 +9,10 @@ android {
 
     defaultConfig {
         applicationId "com.aradevs.moviesapp"
-        minSdkVersion 22
+        minSdkVersion 24
         targetSdkVersion 30
         versionCode 1
-        versionName "0.5"
+        versionName "1.0-RC"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
